# Splines

./: CMakeLists.txt  README.md  setup.py
data/kinect_paper/: frame0.txt  frame1.txt  frame10.txt  frame100.txt  frame101.txt  frame102.txt  frame103.txt  frame104.txt  frame105.txt  frame106.txt  frame107.txt  frame108.txt  frame109.txt  frame11.txt  frame110.txt  frame111.txt  frame112.txt  frame113.txt  frame114.txt  frame115.txt  frame116.txt  frame117.txt  frame118.txt  frame119.txt  frame12.txt  frame120.txt  frame121.txt  frame122.txt  frame123.txt  frame124.txt  frame125.txt  frame126.txt  frame127.txt  frame128.txt  frame129.txt  frame13.txt  frame130.txt  frame131.txt  frame132.txt  frame133.txt  (+151 more)
src/: bbs.cpp  bbs.h  main.cpp  warps.cpp  warps.h
tests/: Untitled.ipynb  test.cpp  test_basic.py
